--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -28,7 +28,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    //
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+    //	oauth2.0용
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     // lombok
     compileOnly 'org.projectlombok:lombok'
@@ -50,6 +57,11 @@ dependencies {
     // QueryDSL - Updated configuration
     implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
     implementation 'com.querydsl:querydsl-core:5.1.0'
+
+    // JWT - Updated to use implementation instead of compile/runtime
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
     annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
