feat: k8s deploy 이미지 태그 변경
- nhn cloud 태그와 일치

--- a/recruit/k8s/be-recruit.yaml
+++ b/recruit/k8s/be-recruit.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: be-recruit
-        image: sudo21/kareer:be-recruit-1
+        image: sudo21/kareer:be-recruit-{BUILD_DATE_TIME}
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
