--- a/recruit/src/main/resources/application-example.properties
+++ b/recruit/src/main/resources/application-example.properties
@@ -2,6 +2,10 @@ spring.application.name=recruit
 
 server.port=8080
 
+# Domain
+front.domain=https://localhost:80
+sub.domain=http://localhost:8080
+
 # DB ?? ??
 spring.datasource.url=jdbc:mysql://db-host:3306/db-name?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=user
