--- a/recruit/build.gradle
+++ b/recruit/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
+bootJar {
+	archiveFileName = "app.jar"
+}
+
 group = 'com.app'
 version = '0.0.1-SNAPSHOT'
 description = 'Recruit project for Spring Boot'
