[Feat] k8s 설정 수정

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -8,6 +8,10 @@ group = 'com.app'
 version = '0.0.1-SNAPSHOT'
 description = 'backend'
 
+bootJar {
+    archiveFileName = "app.jar"
+}
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
@@ -67,6 +71,8 @@ dependencies {
     annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
 }
 
 tasks.named('test') {
