--- a/backend/k8s/kareer-user-ingress.yaml
+++ b/backend/k8s/kareer-user-ingress.yaml
@@ -9,18 +9,17 @@ spec:
     - http:
         paths:
           # Swagger UI 경로
-          - path: /swagger-ui/user
-            pathType: Prefix
-            backend:
-              service:
-                name: be-user
-                port:
-                  number: 8081
-          # API 경로
-          - path: /api/user
-            pathType: Prefix
-            backend:
-              service:
-                name: be-user
-                port:
-                  number: 8081
+            - path: /user/swagger-ui(/|$)(.*)
+              pathType: ImplementationSpecific
+              backend:
+                service:
+                  name: be-user
+                  port:
+                    number: 8081
+            - path: /user/api(/|$)(.*)
+              pathType: ImplementationSpecific
+              backend:
+                service:
+                  name: be-user
+                  port:
+                    number: 8081
