feat: k8s 설정 수정

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -52,6 +52,6 @@ jwt:
 
 springdoc:
   swagger-ui:
-    path: /swagger-ui/index.html
+    path: /swagger-ui.html
   api-docs:
     path: /v3/api-docs
