--- a/backend/k8s/kareer-user-ingress.yaml
+++ b/backend/k8s/kareer-user-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: be-recruit-ingress
+  name: be-user-ingress
   namespace: backend
 spec:
   ingressClassName: nginx
